--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,7 @@ Maintainer: Karan Uppal <kuppal2@emory.edu>
 Description: xMSannotator includes functions for metabolite annotation using HMDB, KEGG, LipidMaps, T3DB,  and ChemSpider. The package also includes utilites for querying KEGG using the REST interface.
 License: GPL2.0
 LazyLoad: no
-Depends: XML, R2HTML, WGCNA, RCurl, doSNOW, foreach, SSOAP, png, rjson, snow, plyr, KEGGREST, flashClust, pcaMethods, Rdisop
+Depends: XML, R2HTML, WGCNA, RCurl, doSNOW, foreach, SSOAP, png, rjson, snow, plyr, KEGGREST, flashClust, pcaMethods, Rdisop, limma
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
